Fix bug with white spaces in radio button label

--- a/frontend/src/app/modules/availability/new-slot/event-detail/event-detail.component.sass
+++ b/frontend/src/app/modules/availability/new-slot/event-detail/event-detail.component.sass
@@ -18,7 +18,7 @@
     overflow-x: hidden
     @media (max-width: $desktop-min-width)
         grid-template-columns: 100%
-        width: 85%
+        width: 90%
 
     .form-container
         grid-column-start: 1
@@ -60,6 +60,8 @@
     padding-left: 5px
     height: 2.4em
     width: 12.8em
+.mat-radio-button.mat-radio-label
+    white-space: normal
 
 .checkbox-text
     font-weight: 400
@@ -134,7 +136,7 @@ p
     align-items: flex-start
 
 .example-radio-button
-    margin: 5px
+    margin: 5px 0 5px 0
 
 .input-password
     margin-left: -5px
@@ -154,13 +156,6 @@ p
 .input-field
     margin-left: 7px
 
-::ng-deep .mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle
-    border-color: $black
-
-::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle
-    color: $black
-    background-color: $black
-
 ::ng-deep .container
     .mat-select
         box-sizing: border-box
@@ -171,9 +166,6 @@ p
     .mat-select-value
         color: $dark-gray
         font-size: 15px
-        
-.mat-select
-    width: min(280px, 90%)
 
 .password-input-container
     box-sizing: border-box
@@ -197,3 +189,7 @@ p
 
 small
     color: $cinnabar
+
+::ng-deep .input-button-matgroup .mat-radio-label
+    @media (max-width: $desktop-min-width)
+        white-space: pre-line !important
